<resources>
    <string name="unknown_value">--</string>
    <string name="unknown_text">Unknown</string>
    <string name="app_name">Weather</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_cities">Cities</string>
    <string name="nav_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="feels_like">Feels like</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="day_weather_fragment_tag">Day</string>
    <string name="today_title">Today</string>
    <string name="tomorrow_title">Tomorrow</string>
    <string name="next_days_title">Next days</string>

    <string name="weather_data_failed_update_text">Weather information cannot be retrieved, please check your connection or try again later</string>
</resources>