<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/page_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/demo"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".fragment.DayWeatherFragment"
                app:layoutDescription="@xml/fragment_feed_scene">

                <TextView
                    android:id="@+id/current_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/current_weather_horizontal_margin"
                    android:text="@string/unknown_value"
                    android:textAppearance="@style/TextAppearance.AppTheme.CurrentTemperature"
                    app:layout_constraintBottom_toTopOf="@+id/current_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/current_icon"
                    app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                    android:id="@+id/current_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_text"
                    android:textAppearance="@style/TextAppearance.AppTheme.CurrentLocation"
                    app:layout_constraintBottom_toTopOf="@+id/current_temp_feels_like"
                    app:layout_constraintStart_toStartOf="@+id/current_temperature"
                    app:layout_constraintTop_toBottomOf="@+id/current_temperature"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/current_temp_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:textAppearance="@style/TextAppearance.AppTheme.CurrentExtraTempInfo"
                    app:layout_constraintBottom_toBottomOf="@+id/current_icon"
                    app:layout_constraintStart_toStartOf="@+id/current_temperature_end"
                    app:layout_constraintTop_toBottomOf="@+id/current_location" />

                <TextView
                    android:id="@+id/current_temperature_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/current_weather_horizontal_margin_collapsed"
                    android:alpha="0"
                    android:text="--"
                    android:textAppearance="@style/TextAppearance.AppTheme.CurrentCollapsed"
                    app:layout_constraintBottom_toTopOf="@+id/current_temp_feels_like_end"
                    app:layout_constraintEnd_toStartOf="@+id/current_location_end"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/current_icon" />

                <TextView
                    android:id="@+id/current_location_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:alpha="0"
                    android:text="Unknown"
                    android:textAppearance="@style/TextAppearance.AppTheme.CurrentCollapsed"
                    app:layout_constraintBottom_toBottomOf="@+id/current_temperature_end"
                    app:layout_constraintStart_toEndOf="@id/current_temperature_end"
                    app:layout_constraintTop_toTopOf="@+id/current_temperature_end"
                    app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                    android:id="@+id/current_temp_feels_like_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:textAppearance="@style/TextAppearance.AppTheme.CurrentExtraTempInfo"
                    app:layout_constraintStart_toStartOf="@+id/current_temperature_end"
                    app:layout_constraintTop_toBottomOf="@+id/current_temperature_end"
                    app:layout_constraintBottom_toBottomOf="@id/current_icon" />

                <ImageView
                    android:id="@+id/current_icon"
                    android:layout_width="@dimen/current_weather_icon_size"
                    android:layout_height="@dimen/current_weather_icon_size"
                    android:layout_marginTop="@dimen/current_weather_top_margin"
                    android:layout_marginEnd="@dimen/current_weather_horizontal_margin"
                    android:layout_marginBottom="@dimen/current_weather_bottom_margin"
                    tools:src="@drawable/sunny"
                    app:layout_constraintBottom_toTopOf="@id/today_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/today_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/forecast_container_title_vertical_margin"
                    android:layout_marginStart="@dimen/forecast_container_title_start_margin"
                    android:visibility="gone"
                    android:text="@string/day_weather_fragment_tag"
                    android:textAppearance="@style/TextAppearance.AppTheme.ForecastHeader"
                    app:layout_constraintTop_toBottomOf="@id/current_icon"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.revengeos.weather.IconTextView
                    android:id="@+id/offline_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/forecast_container_title_start_margin"
                    android:gravity="center_vertical"
                    android:alpha="0"
                    app:iconSize="22dp"
                    app:src="@drawable/ic_outline_cloud_off"
                    app:iconTintColor="?android:textColorSecondary"
                    app:layout_constraintTop_toTopOf="@id/today_title"
                    app:layout_constraintBottom_toBottomOf="@id/today_title"
                    app:layout_constraintEnd_toEndOf="parent" />

                <LinearLayout
                    android:id="@+id/today_additional_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/forecast_container_title_vertical_margin"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/today_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <FrameLayout
                        android:id="@+id/current_data_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/forecast_container_title_vertical_margin"
                        android:layout_marginBottom="@dimen/forecast_container_title_vertical_margin">

                        <com.revengeos.weather.WeatherDataGridView
                            android:id="@+id/current_data"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </FrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/today_forecast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:paddingStart="@dimen/forecast_container_horizontal_margin"
                        android:paddingEnd="@dimen/forecast_container_horizontal_margin"
                        android:splitMotionEvents="false"/>

                    <TextView
                        android:id="@+id/tomorrow_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/forecast_container_title_vertical_margin"
                        android:layout_marginStart="@dimen/forecast_container_title_start_margin"
                        android:textSize="32sp"
                        android:text="@string/tomorrow_title"
                        android:textAppearance="@style/TextAppearance.AppTheme.ForecastHeader"
                        app:layout_constraintTop_toBottomOf="@id/current_icon"
                        app:layout_constraintStart_toStartOf="parent"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weather_data_updated_failed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageView
                        android:layout_width="@dimen/current_weather_icon_size"
                        android:layout_height="@dimen/current_weather_icon_size"
                        android:src="@drawable/ic_outline_cloud_off"
                        app:tint="?android:textColorSecondary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/weather_data_failed_update_text"
                        android:textAlignment="center"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="17sp" />
                </LinearLayout>
            </androidx.constraintlayout.motion.widget.MotionLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/bottom_inset_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_scrim"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Space
                android:id="@+id/bottom_inset"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/design_bottom_navigation_height"/>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>